# hu_sentiment_analyser

./: .env.example  README.md  params.yaml  pyproject.toml
artifacts/data/resources/: accepted_punctuations.txt  emojis_hun.txt  stopwords.txt
config/: config.yaml
src/: main.py
src/sentimentClassifier/: __init__.py
src/sentimentClassifier/components/common/: data_module.py  review_dataset.py
src/sentimentClassifier/components/data_ingestion/: data_ingestion.py
src/sentimentClassifier/components/data_preprocess/: __init__.py  data_preprocess.py
src/sentimentClassifier/components/evaluation/: evaluation.py
src/sentimentClassifier/components/model/: __init__.py  sentiment_analyser.py
src/sentimentClassifier/components/preprocess/: __init__.py  resource_loader.py  target_cleaner.py  text_cleaner.py
src/sentimentClassifier/components/train/: data_module.py  review_dataset.py  trainer.py
src/sentimentClassifier/config/: __init__.py  configuration.py
src/sentimentClassifier/entity/: __init__.py
src/sentimentClassifier/pipeline/: __init__.py  stage_00_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_train_model.py  stage_04_evaluation.py
src/sentimentClassifier/utils/: __init__.py  common.py
tests/test_data/test_preprocess/: test_target_cleaner.py  test_text_cleaner.py
