[tool.poetry]
name = "hu-sentiment-analyser"
version = "0.1.0"
description = ""
authors = ["popolopo21 <89850285+popolopo21@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
bs4 = "^0.0.1"
lxml = "^5.0.1"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
transformers = "^4.36.2"
python-box = "^7.1.1"
ensure = "^1.0.4"
scikit-learn = "^1.3.2"
tensorboard = "^2.15.1"
torch = {version = "2.0.1+cu118", source = "torch"}
gdown = "^4.7.1"
pyyaml = "^6.0.1"
mlflow = "^2.9.2"
python-dotenv = "^1.0.0"
dvc = "^3.38.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
